@@ -71,6 +71,7 @@ module NewRelic
     require 'new_relic/url_rule'
     require 'new_relic/noticed_error'
     require 'new_relic/histogram'
+    require 'new_relic/timer_lib'
     
     require 'new_relic/agent/chained_call'
     require 'new_relic/agent/agent'
@@ -92,7 +93,6 @@ module NewRelic
     require 'set'
     require 'thread'
     require 'resolv'
-    require 'timeout'
     
     # An exception that is thrown by the server if the agent license is invalid.
     class LicenseException < StandardError; end
